work on methods and frontend

--- a/EventTracker/WebContent/Index.html
+++ b/EventTracker/WebContent/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Quizing</title>
+    <title>EventTracker-Sleep</title>
     <link rel="stylesheet" href="eventtracker.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
